# aiman-apiclient-python

./: .coverage  .gitignore  README.md  build_and_publish.sh  pyproject.toml
aiman/: __init__.py
aiman/client/: _ai_man_client.py
aiman/core/: classes.py  credentials.py  util.py
brandcompete/: __init__.py
brandcompete/client/: __init__.py  _ai_man_client.py
brandcompete/core/: classes.py  credentials.py  util.py
tests/: README.md
tests/aiman/: classes_test.py  service_client_test.py
