[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aiman"
authors = [
  {name = "brandcompete GmbH", email = "info@brandcompete.com"}
]
description = "Client Library to communicate with AIMan-API"
version = "1.0.3"
license = {file = "LICENSE"}
requires-python = ">= 3.8"
dependencies = [
    'pyjwt',
    'setuptools',
    'pandas',
    'pypdf',
    'PyPDF2',
    'openpyxl',
    'docx2txt'
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    "Operating System :: OS Independent",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering :: Artificial Intelligence'
]
readme = "README.md"

[project.urls]
Homepage = "https://www.brandcompete.com"
Repository = "https://github.com/brandcompete/aiman-apiclient-python"

[tool.setuptools.packages]
find = {} 
